--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>！！！祝你一切顺利步步高升！！！</h1>
-	<img src="img/顺利.jpg" alt="加载不出来喵">
+	<img src="顺利.jpg" alt="加载不出来喵">
     <p></p>
 </body>
 </html>
